# weather-currency-bot

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
.venv~/Scripts/: activate  activate.bat
bot/: config.py  main.py
bot/handlers/: rates.py  rates_flow.py  start.py  weather.py
bot/keyboards/: main.py
bot/services/: rates_client.py  weather_client.py
bot/states/: rates.py
