[project]
name = "weather-currency-bot"
version = "0.1.0"
description = "Telegram bot for weather and currency exchange rates"
requires-python = ">=3.11"
dependencies = [
  "aiogram>=3.4.1",
  "httpx>=0.25.0",
  "pydantic-settings>=2.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "ruff>=0.6.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
